src/test/ui/rfc-2093-infer-outlives/phatom-data.stderr
error[E0597]: `local` does not live long enough
  --> $DIR/phatom-data.rs:56:20
   |
LL |     inferred_bound(&local);
   |     ---------------^^^^^^-
   |     |              |
   |     |              borrowed value does not live long enough
   |     argument requires that `local` is borrowed for `'static`
...
LL | }
   | - `local` dropped here while still borrowed

error[E0597]: `local` does not live long enough
  --> $DIR/phatom-data.rs:57:21
   |
LL |     redundant_bound(&local);
   |     ----------------^^^^^^-
   |     |               |
   |     |               borrowed value does not live long enough
   |     argument requires that `local` is borrowed for `'static`
...
LL | }
   | - `local` dropped here while still borrowed

error[E0597]: `local` does not live long enough
  --> $DIR/phatom-data.rs:58:18
   |
LL |     manual_bound(&local);
   |     -------------^^^^^^-
   |     |            |
   |     |            borrowed value does not live long enough
   |     argument requires that `local` is borrowed for `'static`
LL |     no_bound(&local); // OK
LL | }
   | - `local` dropped here while still borrowed

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0597`.
